# statbov

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  tests.yml
database/: diagram.dbml
scripts/: commands.sh  update_chromedriver.py
statbov/: asgi.py  settings.py  urls.py  wsgi.py
statbov/app/: admin.py  apps.py  manager.py  urls.py
statbov/app/forms/: __init__.py  login.py  signup.py  user.py
statbov/app/migrations/: 0001_initial.py
statbov/app/models/: __init__.py  animal.py  batch.py  batch_log.py  diet.py  diet_log.py  employment.py  employment_user.py  farm.py  farm_user.py  farmer.py  log.py  todo.py  user.py  user_address.py  user_phone.py  weight_log.py
statbov/app/views/: __init__.py  login.py  signup.py
statbov/settings/: __init__.py  assets.py  databases.py  environment.py  i18n.py  installed_apps.py  messages.py  security.py  templates.py
statbov/static/css/: login.css  login_signup.css
statbov/static/css/landing/: index.css  plans.css
statbov/static/js/: app.js  login_signup.js
statbov/static/js/landing/: support.js
statbov/templates/: about.html  blog.html  index.html  login.html  plans.html  signup.html  support.html
statbov/templates/base/: app.html  base.html  lading.html  login_signup.html
statbov/templates/landing/: about.html  blog.html  index.html  plans.html  support.html
statbov/templates/partials/: head.html  lading.html
tests/: test_about.py  test_blog.py  test_index.py  test_login.py  test_plans.py  test_signup.py  test_support.py
tests/form_tests/: test_login_form.py  test_signup_form.py
tests/functional_tests/: _utils.py  test_index.py  test_plans.py
tests/test_models/: test_animal.py  test_batch.py  test_batch_log.py  test_diet.py  test_diet_log.py  test_user.py
tests/unit_tests/: test_login_form.py  test_signup_form.py
tests/utils/: __init__.py  base.py
tests/utils/fixtures/: animal.json  batch.json  batch_log.json  diet_log.json
