[tool.poetry]
name = "statbov"
version = "0.1.0"
description = "Uma plataforma para análise estatística de desempenho da produção de rebanhos bovinos."
authors = ["Henrique Sebastião <contato@henriquesebastiao.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.14.2"
django = "^6.0.1"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.11"
fontawesomefree = "^6.6.0"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
ruff = "^0.14.14"
pytest-django = "^4.11.1"
selenium = "^4.40.0"
radon = {extras = ["toml"], version = "^6.0.1"}
mypy = "^1.19.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
exclude = ['migrations', '__init__.py']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint.per-file-ignores]
"security.py" = ["E501"]
"user_phone.py" = ["E501"]
"user_address.py" = ["E501"]
"login.py" = ["E501"]
"signup.py" = ["E501"]
"batch_log.py" = ["E501"]

[tool.coverage.run]
branch = true
omit = ["**/*test*.py", "manage.py", "**/migrations/*", "**/project/*.py"]

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
pythonpath = "."
DJANGO_SETTINGS_MODULE = "statbov.settings"
python_files = "test.py tests.py test_*.py tests_*.py *_test.py *_tests.py"
addopts = "--strict-markers -v"
norecursedirs = "dist build .* data venv"
markers = [
    "functional_test: Run tests that are selenium based",
    "not_in_sqlite: Run tests that are not in postgresql",
]

[tool.commitizen]
version_provider = "poetry"
update_changelog_on_bump = true
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[[tool.mypy.overrides]]
module = [
    "django.*",
    "decouple.*",
]
ignore_missing_imports = true
